@@ -1,3 +1,9 @@
+Thu Jun 16 14:24:59 2005  Theo Markettos  <theo@markettos.org.uk>
+
+	* common/riscosify.c: Add support for mapping /home/riscos/env/foo
+	  to foo:
+	* test/testriscosify.c: Add more tests.
+
 Mon Jun 13 14:55:30 2005  Peter Naulls  <peter@chocky.org>
 
 	* clib/netdb.h: Remove bogus extra AI_PASSIVE.
@@ -16,7 +22,7 @@ Sat May 28 21:52:15 2005  Peter Naulls  <peter@chocky.org>
 	  buffer.
 	* clib/errno.h: #define errno as itself, to allow for checks
 	  that errno exists to work.
-	* clib/sys/ioctl.h: Some TCPIPLibs compatibility (not implemented).     
+	* clib/sys/ioctl.h: Some TCPIPLibs compatibility (not implemented).
 
 Mon May 16 22:30:29 2005  Peter Naulls  <peter@chocky.org>
 
